--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.4.2",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "sass-loader": "^6.0.6",
